--- a/internal/configs/td-agent.conf
+++ b/internal/configs/td-agent.conf
@@ -4,8 +4,9 @@
   @label @KUBERNETES_CONTAINERS
   path /var/log/containers/*.log
   pos_file /var/log/containers.log.pos
+  from_encoding ISO8859-1
+  encoding UTF-8
   tag raw.containers.*
-  read_from_head true
   <parse>
     @type multi_format
     <pattern>
@@ -35,35 +36,13 @@
   <filter containers.**>
     @type kubernetes_metadata
   </filter>
-  <filter **>
-    @type record_transformer
-    enable_ruby
-    <record>
-      container_id ${record['docker']['container_id']}
-    </record>
-  </filter>
-  <filter **>
-    @type concat
-    key log
-    stream_identity_key container_id
-    multiline_end_regexp /\n$/
-    separator " "
-    flush_interval 30
-  </filter>
-  <filter **>
-    @type record_transformer
-    remove_keys container_id
-  </filter>
   <match containers.**>
-      @type rewrite_tag_filter
-      <rule>
-        key $.kubernetes.container_name
-        pattern ^(.+)$
-        tag $1.${tag}
-      </rule>
-  </match>
-  <match {heapster,influxdb,grafana,fluentd-coralogix}.containers.**>
-    @type null
+    @type rewrite_tag_filter
+    <rule>
+      key $.kubernetes.container_name
+      pattern ^(.+)$
+      tag $1.${tag}
+    </rule>
   </match>
   <filter *.containers.**>
     @type parser
