--- a/deploy/crds/coralogix.com_coralogixloggers_crd.yaml
+++ b/deploy/crds/coralogix.com_coralogixloggers_crd.yaml
@@ -10,6 +10,7 @@ spec:
     plural: coralogixloggers
     singular: coralogixlogger
   scope: Namespaced
+  version: v1
   versions:
   - name: v1
     schema:
