--- a/internal/configs/td-agent.conf
+++ b/internal/configs/td-agent.conf
@@ -36,6 +36,13 @@
   <filter containers.**>
     @type kubernetes_metadata
   </filter>
+  <filter containers.**>
+    @type record_transformer
+    enable_ruby true
+    <record>
+      kubernetes ${record["kubernetes"].merge({"cluster_name" => ENV.fetch("CLUSTER_NAME", "cluster.local")})}
+    </record>
+  </filter>
   <match containers.**>
     @type rewrite_tag_filter
     <rule>
