Certification issues fixed

--- a/config/manifests/bases/coralogix-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/coralogix-operator.clusterserviceversion.yaml
@@ -119,6 +119,7 @@ spec:
     type: MultiNamespace
   - supported: true
     type: AllNamespaces
+  relatedImages: []
   keywords:
   - coralogix
   - logging
