--- a/bundle/manifests/coralogix-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/coralogix-operator.clusterserviceversion.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: operators.coreos.com/v1alpha1
 kind: ClusterServiceVersion
 metadata:
@@ -20,7 +21,7 @@ metadata:
     capabilities: Basic Install
     categories: Logging & Tracing
     certified: "false"
-    containerImage: registry.connect.redhat.com/coralogix/coralogix-operator:1.0.1
+    containerImage: registry.connect.redhat.com/coralogix/coralogix-operator@sha256:4673e4db99fb76496479fa30f390c02c14018cdb13450a78efc6690c8420f389
     createdAt: "2020-09-08T07:15:53Z"
     description: Coralogix is a machine data analytics SaaS platform that drastically
       improves the delivery & maintenance process for software providers. Using proprietary
@@ -232,7 +233,7 @@ spec:
                 - --upstream=http://127.0.0.1:8080/
                 - --logtostderr=true
                 - --v=10
-                image: registry.redhat.io/openshift4/ose-kube-rbac-proxy:v4.5
+                image: registry.redhat.io/openshift4/ose-kube-rbac-proxy@sha256:bb54bc66185afa09853744545d52ea22f88b67756233a47b9f808fe59cda925e
                 name: kube-rbac-proxy
                 ports:
                 - containerPort: 8443
@@ -243,7 +244,7 @@ spec:
                 - --enable-leader-election
                 command:
                 - /manager
-                image: registry.connect.redhat.com/coralogix/coralogix-operator:1.0.1
+                image: registry.connect.redhat.com/coralogix/coralogix-operator@sha256:4673e4db99fb76496479fa30f390c02c14018cdb13450a78efc6690c8420f389
                 name: manager
                 resources:
                   limits:
@@ -293,6 +294,13 @@ spec:
     type: MultiNamespace
   - supported: true
     type: AllNamespaces
+  relatedImages:
+  - name: coralogix-operator
+    image: registry.connect.redhat.com/coralogix/coralogix-operator@sha256:4673e4db99fb76496479fa30f390c02c14018cdb13450a78efc6690c8420f389
+  - name: coralogix-fluentd
+    image: registry.connect.redhat.com/coralogix/coralogix-fluentd@sha256:925b2d97edd0681c10cc3cc61059e6fd17e68cb12f9386d4af50c1e380db422d
+  - name: ose-kube-rbac-proxy
+    image: registry.redhat.io/openshift4/ose-kube-rbac-proxy@sha256:bb54bc66185afa09853744545d52ea22f88b67756233a47b9f808fe59cda925e
   keywords:
   - coralogix
   - logging
