adding release-version and latest images tags (#54)
* adding release-version and latest images tags

--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -45,11 +45,19 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+      - uses: actions/checkout@v2
+
+      - name: Fetch latest release version
+        id: fetch-latest-release
+        uses: reloc8/action-latest-release-version@1.0.0
+
       - name: Build And Push
         uses: docker/build-push-action@v2.8.0
         with:
           context: .
           platforms: linux/amd64,linux/arm64
           push: ${{ github.repository == 'coralogix/coralogix-operator' && github.event_name != 'pull_request'}}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: |
+            ${{ steps.meta.outputs.tags }}
+            coralogix/coralogix-operator:${{ steps.fetch-latest-release.outputs.latest-release }}
+            coralogix/coralogix-operator:latest
