--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -17,6 +17,10 @@ jobs:
     - uses: actions/setup-go@v4
       with:
         go-version-file: go.mod
+    - name: Create k8s Kind Cluster
+      uses: helm/kind-action@v1.4.0
+    - name: Install CRDs
+      run: make install
     - run: make test
     - name: Patch Coverage
       uses: seriousben/go-patch-cover-action@v1
