--- a/tests/e2e/promatheusrules/promatheusrule/02-assert.yaml
+++ b/tests/e2e/promatheusrules/promatheusrule/02-assert.yaml
@@ -2,7 +2,7 @@ apiVersion: coralogix.com/v1alpha1
 kind: Alert
 metadata:
   finalizers:
-    - batch.tutorial.kubebuilder.io/finalizer
+    - alert.coralogix.com/finalizer
   labels:
     app.kubernetes.io/managed-by: prometheus-example-rules
   name: prometheus-example-rules-app-latency-1
