add support for custom integrationName and for sloth generated prometheus rules

--- a/tests/e2e/promatheusrules/00-install.yaml
+++ b/tests/e2e/promatheusrules/00-install.yaml
@@ -18,6 +18,7 @@ spec:
           for: 5m
           annotations:
             cxMinNonNullValuesPercentage: "20"
+            integrationName: "test"
     - name: example.rules2
       interval: "70s"
       rules:
