--- a/tests/e2e/promatheusrules/01-assert.yaml
+++ b/tests/e2e/promatheusrules/01-assert.yaml
@@ -21,8 +21,10 @@ status:
           minNonNullValuesPercentage: 0
           sampleThresholdPercentage: 100
           threshold: "0"
+          integrationName: "test"
           timeWindow: FiveMinutes
-        searchQuery: histogram_quantile(0.99, sum(irate(istio_request_duration_seconds_bucket{reporter="source",destination_service=~"ingress-annotation-test-svc.example-app.svc.cluster.local"}[1m]))
+        searchQuery:
+          histogram_quantile(0.99, sum(irate(istio_request_duration_seconds_bucket{reporter="source",destination_service=~"ingress-annotation-test-svc.example-app.svc.cluster.local"}[1m]))
           by (le, destination_workload)) > 0.2
   name: app-latency
   notificationGroups:
