--- a/config/samples/prometheusrules/monitoring.coreos.com_prometheusrules.yaml
+++ b/config/samples/prometheusrules/monitoring.coreos.com_prometheusrules.yaml
@@ -22,15 +22,16 @@ spec:
           for: 5m
           annotations:
             cxMinNonNullValuesPercentage: "20"
+            cxIntegrationName: "test"
     - name: example.rules2
       interval: "70s"
       rules:
-          - record: ExampleRecord
-            expr: vector(3)
-          - record: ExampleRecord
-            expr: vector(4)
-          - alert: app-latency
-            expr: histogram_quantile(0.99, sum(irate(istio_request_duration_seconds_bucket{reporter="source",destination_service=~"ingress-annotation-test-svc.example-app.svc.cluster.local"}[1m])) by (le, destination_workload)) > 0.2
-            for: 5m
-            annotations:
-              cxMinNonNullValuesPercentage: "20"
+        - record: ExampleRecord
+          expr: vector(3)
+        - record: ExampleRecord
+          expr: vector(4)
+        - alert: app-latency
+          expr: histogram_quantile(0.99, sum(irate(istio_request_duration_seconds_bucket{reporter="source",destination_service=~"ingress-annotation-test-svc.example-app.svc.cluster.local"}[1m])) by (le, destination_workload)) > 0.2
+          for: 5m
+          annotations:
+            cxMinNonNullValuesPercentage: "20"
