--- a/kuttl-test.yaml
+++ b/kuttl-test.yaml
@@ -5,5 +5,6 @@ testDirs:
   - tests/e2e/rulegroups
   - tests/e2e/recordingrulegroupsets
   - tests/e2e/promatheusrules
+  - tests/e2e/dashboards
 namespace: default
 timeout: 60
